trying position fixed on the main content wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -240,11 +240,13 @@ header nav .ul--wrap ul li .nav__link:hover::before {
   .main-content .main-content--wrap {
     min-width: 300px;
     width: 100%;
-    height: 100%;
     margin-top: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    position: fixed;
+    bottom: 0;
+    top: 6rem;
   }
 }
 
@@ -284,12 +286,12 @@ header nav .ul--wrap ul li .nav__link:hover::before {
 
 @media only screen and (max-width: 850px) {
   .main-content .main-content--wrap .slide--grid {
+    border-radius: 0px;
     -ms-grid-columns: 100vw;
         grid-template-columns: 100vw;
     -ms-grid-rows: minmax(200px, 1fr) 1fr;
         grid-template-rows: minmax(200px, 1fr) 1fr;
     margin-top: 0;
-    max-height: 100vh;
   }
 }
 
