--- a/styles/_hero-section.scss
+++ b/styles/_hero-section.scss
@@ -19,9 +19,12 @@
         @include mobileSize {
             min-width: 300px;
             width: 100%;
-            height: 100%;
+
             margin-top: 0;
             display: flex;
+            position: fixed;
+            bottom: 0;
+            top: 6rem;
         }
 
         .title {
@@ -52,10 +55,11 @@
             overflow: hidden;
 
             @include mobileSize {
+                border-radius: 0px;
                 grid-template-columns: 100vw;
                 grid-template-rows: minmax(200px, 1fr) 1fr;
                 margin-top: 0;
-                max-height: 100vh;
+                // max-height: 100vh;
                 // position: fixed;
                 // top: 0;
                 // right: 0;
